--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^4.4.4",
     "i18next": "^23.14.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
